...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e0R-RM-Whk">
                                        <rect key="frame" x="0.0" y="0.0" width="277" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="com.tictactoe.turnPlayer"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                        <nil key="textColor"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGT-Na-II2">
                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="com.tictactoe.board.topleft"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="5XS-uE-JnU"/>
...
                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Deb-DP-mPB">
                                                <rect key="frame" x="98" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="com.tictactoe.board.topcenter"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="VXn-eG-YWf"/>
...
                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R8g-kp-fOO">
                                                <rect key="frame" x="196" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="com.tictactoe.board.topright"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="PYj-Md-geW"/>
...
                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTT-LL-Ual">
                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="com.tictactoe.board.middleleft"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="0rK-zk-y2M"/>
...
                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ylJ-qq-3kA">
                                                <rect key="frame" x="98" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="com.tictactoe.board.middlecenter"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="FZ2-zC-dyv"/>
...
                                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2h-Tg-H3c">
                                                <rect key="frame" x="196" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="com.tictactoe.board.middleright"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="OLZ-85-rYE"/>
...
                                            <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3rO-xK-UIC">
                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="com.tictactoe.board.bottomleft"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="maj-GA-OuI"/>
...
                                            <button opaque="NO" tag="7" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eh4-Eu-l1c">
                                                <rect key="frame" x="98" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="com.tictactoe.board.bottomcenter"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="FWx-ZI-hik"/>
...
                                            <button opaque="NO" tag="8" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dyf-AT-eyq">
                                                <rect key="frame" x="196" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="com.tictactoe.board.bottomright"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="LGQ-ai-enD"/>
...
